syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/built_in_variables";
package messages.built_in_variables;

message Variable {
	string name = 1;
	string example = 2;
	string description = 3;
	bool visible = 4;
	bool can_be_used_in_registry = 5;
}

message GetAllResponse {
	repeated Variable variables = 1;
}
